--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "PingOneAuthentication": {
     "Issuer": "https://api.pingone.com",
-    "ClientId": "fb75b35a-f791-4398-b8aa-ca8f6063e410",
-    "ClientSecret": "fb75b35a-f791-4398-b8aa-ca8f6063e410"
+    "ClientId": "{ClientId}",
+    "ClientSecret": "{ClientSecret}"
   },
   "Authentication": {
     "DefaultScheme": "OpenIdConnect",
