Add support for identity enrollment, verification and provisioning

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,35 +6,21 @@
     }
   },
   "PingOneAuthentication": {
+    "BaseUrl": "https://api.pingone.com/v1/",
     "Issuer": "https://api.pingone.com",
     "ClientId": "{ClientId}",
-    "ClientSecret": "{ClientSecret}"
-  },
-  "Authentication": {
-    "DefaultScheme": "OpenIdConnect",
-    "Schemes": {
-      "OpenIdConnect": {
-        "SignInScheme": "Cookies",
-        "Authority": "https://auth.pingone.com/{EnvironmentId}/as",
-        "ClientId": "{ClientId}",
-        "ClientSecret": "{ClientSercret}",
-        "ClaimsIssuer": "https://auth.pingone.com/{EnvironmentId}/as",
-        "ResponseType": "code",
-        "CallbackPath": "/signin-oidc",
-        "SignedOutCallbackPath": "/signout-callback-oidc",
-        "SaveTokens": true,
-        "Scope": [
-          "openid",
-          "profile"
-        ]
-      }
-    }
+    "ClientSecret": "{ClientSecret}",
+    "TokenEndpoint": "https://auth.pingone.com/{EnvironmentId}/as/token",
+    "EnvironmentId": "{EnvironmentId}",
+    "PopulationId": "{PopulationId}",
+    "BirthRightGroupId": "{GroupId}"
   },
   "MailGun": {
+    "MagicLinkBaseUrl": "https://localhost:7255/",
     "ApiBaseUrl": "https://api.mailgun.net/v3/",
-    "ApiKey": "...",
-    "SandboxDomain": "sandbox{123}.mailgun.org",
-    "FromEmail": "GetChatty Ltd. <postmaster@sandbox{123}.mailgun.org>"
+    "ApiKey": "{ApiKey}",
+    "SandboxDomain": "{TenantId}.mailgun.org",
+    "FromEmail": "GetChatty Ltd. <postmaster@{TenantId}.mailgun.org>"
   },
   "AllowedHosts": "*"
 }
