Add data persistence

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -16,11 +16,14 @@
     "BirthRightGroupId": "{GroupId}"
   },
   "MailGun": {
-    "MagicLinkBaseUrl": "https://localhost:7255/",
+    "MagicLinkBaseUrl": "https://localhost:7256/",
     "ApiBaseUrl": "https://api.mailgun.net/v3/",
     "ApiKey": "{ApiKey}",
     "SandboxDomain": "{TenantId}.mailgun.org",
     "FromEmail": "GetChatty Ltd. <postmaster@{TenantId}.mailgun.org>"
+  },
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Host={Host};Database={Database};Username={Username};Password={Password};SSLMode=prefer;CommandTimeout=10;"
   },
   "AllowedHosts": "*"
 }
